--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  nfc_manager: ^4.0.2
+  dio: ^5.8.0+1
+  flutter_riverpod: ^2.6.1
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
+  flutter_secure_storage: ^9.2.4
+  flutter_dotenv: ^5.2.1
+  intl: ^0.20.2
+  go_router: ^15.2.4
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +52,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  freezed: ^3.0.6
+  json_serializable: ^6.9.5
+  build_runner: ^2.5.4
+  riverpod_generator: ^2.6.5
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
