--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   intl: ^0.20.2
   go_router: ^15.2.4
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
